--- a/NUnitMockSample/NUnitMockSample/NUnitMockSample.csproj
+++ b/NUnitMockSample/NUnitMockSample/NUnitMockSample.csproj
@@ -51,8 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Sample.cs" />
-    <Compile Include="SampleTest.cs" />
+    <Compile Include="Tests\SampleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\SampleViewModelTest.cs" />
+    <Compile Include="ViewModels\SampleViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
