--- a/NUnitMockSample/NUnitMockSample/packages.config
+++ b/NUnitMockSample/NUnitMockSample/packages.config
@@ -3,6 +3,13 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Moq" version="4.8.2" targetFramework="net45" />
   <package id="NUnit" version="3.9.0" targetFramework="net45" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
+  <package id="ReactiveProperty" version="4.2.0" targetFramework="net461" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
